# ai-cron

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  requirements.txt
aicron/: __init__.py  cron.py  llm.py  llm_tools.py  main.py  ollama_utils.py  web.py
tests/: test_llm_logic.py
