[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cron"
version = "0.2.0"
description = "Smart AI Cron Tool with Web UI (Ollama, Gemini, GPT Support)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "dev-droid", email = "dev@example.com"}
]
keywords = ["ai", "cron", "nlp", "ollama", "gemini", "automation", "web-ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-crontab>=3.0.0",
    "litellm>=1.0.0",
    "croniter>=2.0.0",
    "ollama>=0.1.0",
    "nicegui>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
ai-cron = "aicron.main:app"

[project.urls]
Homepage = "https://github.com/dev-droid/ai-cron"
Repository = "https://github.com/dev-droid/ai-cron"
Issues = "https://github.com/dev-droid/ai-cron/issues"
